syntax = "proto3";

package interfaces;

message LinuxInterfaces {
    enum InterfaceType {
        VETH = 0;
    };

    message Interface {
        string name = 1;
        string description = 2;
        InterfaceType type = 3;
        bool enabled = 4;
        string phys_address = 5;
        uint32 mtu = 6;
        string host_if_name = 7; /* name of the interface in the host OS */

        // Required format is "ipAddress/ipPrefix"
        repeated string ip_addresses = 10;

        // Linux network namespace to attach the interface into.
        message Namespace {
            enum NamespaceType {
                PID_REF_NS = 0; // Attach to namespace of a given process.
                MICROSERVICE_REF_NS = 1; // Attach to namespace of a docker container running given microservice.
                NAMED_NS = 2;   // Attach to named namespace.
                FILE_REF_NS = 3;   // Attach to namespace referenced by a file handle.
            }
            NamespaceType type = 1;
            uint32 pid = 2;
            string microservice = 3;
            string name = 4;
            string filepath = 5;
        }
        Namespace namespace = 50;

        message Veth {
            string peer_if_name = 1;
        }
        Veth veth = 105;
    };
    repeated Interface interface = 1;
};